crates/ink/tests/ui/contract/fail/impl-block-namespace-invalid-type.stderr
error: expected string type for `namespace` argument, e.g. #[ink(namespace = "hello")]
 --> tests/ui/contract/fail/impl-block-namespace-invalid-type.rs:6:23
  |
6 |     #[ink(namespace = true)]
  |                       ^^^^
